# book-crawling

./: .gitignore  CLAUDE.md  cloudbuild.yaml  compose.yml  debug_aladin.py  debug_librarything.py  debug_summary.jsonl  deploy-cloudrun.sh  main.py  pyproject.toml  railway.toml  ratings.csv  requirements.txt  test_google_books.py  test_lt_playwright.py  test_open_library.py  verify_summary.jsonl
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  deploy-scope-guard.yml
api/: Dockerfile  app.py  db.py  requirements.txt
api/routes/: search.py
api/services/: ai_service.py  crawler_service.py
crawler_logging/: __init__.py  formatters.py  handlers.py  logger.py
crawlers/: __init__.py  aladin.py  amazon.py  base.py  base_http.py  foreign_resolver.py  goodreads.py  isbn_lookup.py  kyobo.py  librarything.py  sarak.py  utils.py  watcha.py  yes24.py
data/: results.csv  reviews.csv  reviews_test.csv
docs/: api-guide.md  crawling-rule.md  deployment-flow.md  devlog.md  openobserve-dashboard.md  todo.md
logs/: crawl.jsonl
models/: __init__.py  book.py
src/: crawler.py  review_crawler.py
supabase/: migration.sql
tests/: __init__.py  conftest.py  test_aladin.py  test_amazon.py  test_base_http.py  test_goodreads.py  test_integration.py  test_isbn_lookup.py  test_kyobo.py  test_librarything.py  test_models.py  test_yes24.py
tests/fixtures/: aladin_lookup_response.json  aladin_search_response.json  amazon_detail.html  amazon_search.html  goodreads_detail.html  goodreads_search.html  kyobo_search.html  (+2 more)
web/: package-lock.json  package.json
(+13 files in other folders)
