[project]
name = "book-crawler"
version = "0.1.0"
description = "Book rating crawler for multiple platforms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright",
    "beautifulsoup4",
    "pandas",
    "cloudscraper>=1.2.71",
    "fastapi>=0.128.1",
    "uvicorn>=0.40.0",
    "supabase>=2.27.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]
